--- a/src/pages/ResourceLibrary.css
+++ b/src/pages/ResourceLibrary.css
@@ -1,5 +1,5 @@
 .resourceLibrary {
-  background: url("images/resourceLibrary.png") no-repeat scroll 0 0 transparent;
+  background: url("/images/resourceLibrary.png") no-repeat scroll 0 0 transparent;
   background-size: cover;
   padding-top: 60px;
   padding-bottom: 60px;
