--- a/src/pages/ManagingCyberSecurityRisks.css
+++ b/src/pages/ManagingCyberSecurityRisks.css
@@ -3,92 +3,90 @@
   margin-bottom: 1.25rem;
 }
 
-
 .ManagingCyberSecurityRisks .num-step {
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
+  align-items: center;
 }
 
-.ManagingCyberSecurityRisks .num1-para{
-	font-style: italic;
-} 
+.ManagingCyberSecurityRisks .num1-para {
+  font-style: italic;
+}
 
 @media (max-width: 649px) {
-	.ManagingCyberSecurityRisks .Header3 .container {
-		padding-bottom: 0;
-	}
+  .ManagingCyberSecurityRisks .Header3 .container {
+    padding-bottom: 0;
+  }
 
-	.container.noPTop {
-		padding-top: 1rem;
-	}
+  .container.noPTop {
+    padding-top: 1rem;
+  }
 }
 
 .link-text {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .ManagingCyberSecurityRisks .border {
-	border: 1px dashed rgba(134, 134, 134, 0.5);
-	margin: 2rem 1rem;
+  border: 1px dashed rgba(134, 134, 134, 0.5);
+  margin: 2rem 1rem;
 }
 
 .VCard-cnt {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .v-small-text {
-	text-align: center;
-	margin    : 1rem 0 0 0;
-	font-size : 0.9375rem;
+  text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.9375rem;
 }
 
 @media (min-width: 1024px) {
-	.link-text {
-		text-align: center;
-		max-width : 90%;
-		margin    : 1rem auto;
-	}
+  .link-text {
+    text-align: center;
+    max-width: 90%;
+    margin: 1rem auto;
+  }
 
-	.ManagingCyberSecurityRisks .mTop2 {
-		margin: 3rem 0;
-	}
+  .ManagingCyberSecurityRisks .mTop2 {
+    margin: 3rem 0;
+  }
 }
 
 @media (min-width: 1200px) {
   .ManagingCyberSecurityRisks .list-title {
-    font-size: 1.575rem;
+    font-size: 1.5rem;
     margin: 2.075rem 0 3.775rem 0;
   }
   .ManagingCyberSecurityRisks .num-step {
-		margin-bottom: 1rem;
-		gap          : 1.8rem;
-	}
+    margin-bottom: 1rem;
+    gap: 1.8rem;
+  }
 }
 
 @media (min-width: 1400px) {
-	.link-text {
-		max-width: 90%;
-		margin   : 1rem auto;
-		font-size: 1.875rem;
-	}
-
-	.ManagingCyberSecurityRisks .mTop2 {
-		margin: 3rem 0;
-	}
-	.ManagingCyberSecurityRisks .list-title {
+  .link-text {
+    max-width: 90%;
+    margin: 1rem auto;
     font-size: 1.875rem;
+  }
+
+  .ManagingCyberSecurityRisks .mTop2 {
+    margin: 3rem 0;
+  }
+  .ManagingCyberSecurityRisks .list-title {
+    font-size: 1.5rem;
     margin: 2.075rem 0 3.775rem 0;
   }
   .ManagingCyberSecurityRisks .num-step {
-		margin: 0 1rem 1rem 1rem;
-		gap   : 2rem;
-	}
+    margin: 0 1rem 1rem 1rem;
+    gap: 2rem;
+  }
 }
 
 @media (min-width: 1600px) {
-	.link-text {
-		max-width: 1480px;
-		margin   : 1rem auto;
-	}
-
-
+  .link-text {
+    max-width: 1480px;
+    margin: 1rem auto;
+  }
 }
