--- a/src/components/TopNavBar.css
+++ b/src/components/TopNavBar.css
@@ -99,15 +99,16 @@ nav .right-panel {
   display: flex;
   justify-content: space-between;
   align-content: flex-end;
-  gap: 5px;
-  padding-right: 20px;
+  align-items: center;
+  gap: 3px;
+  padding-right: 9px;
   transition: 0.25s ease-in-out;
   width: 100%;
 }
 
 nav .nav-btn {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
 }
 
@@ -133,15 +134,18 @@ nav .nav-btn {
 }
 
 .nav-menu-btn span:nth-child(1) {
-  top: 12px;
+  /* top: 12px; */
+  top: 8px;
 }
 
 .nav-menu-btn span:nth-child(2) {
-  top: 17px;
+  /* top: 17px; */
+  top: 14px;
 }
 
 .nav-menu-btn span:nth-child(3) {
-  top: 22px;
+  /* top: 22px; */
+  top: 20px;
 }
 
 .nav-menu-btn.open span:nth-child(1) {
@@ -265,7 +269,7 @@ nav .nav-btn {
   }
 
   .nav-cnt-left {
-    height: 40px;
+    height: 30px;
   }
 
   nav .right-panel {
@@ -344,34 +348,36 @@ nav .nav-btn {
   }
 
   nav .nav-btn {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
   }
 
   .nav-menu-btn span {
     height: 2px;
-    width: 23px;
-    left: 9px;
+    /* width: 23px;
+    left: 9px; */
+    width: 14px;
+    left: 10px;
   }
 
   .nav-menu-btn span:nth-child(1) {
-    top: 14px;
+    top: 10px;
   }
 
   .nav-menu-btn span:nth-child(2) {
-    top: 20px;
+    top: 16px;
   }
 
   .nav-menu-btn span:nth-child(3) {
-    top: 26px;
+    top: 22px;
   }
 
   .nav-menu-btn.open span:nth-child(1) {
-    top: 19px;
+    top: 16px;
   }
 
   .nav-menu-btn.open span:nth-child(3) {
-    top: 19px;
+    top: 16px;
   }
 }
 
@@ -426,8 +432,8 @@ nav .nav-btn {
   }
 
   nav .nav-btn {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
   }
 
   .nav-menu-btn span {
@@ -442,15 +448,15 @@ nav .nav-btn {
   }
 
   .nav-menu-btn span:nth-child(1) {
-    top: 18px;
+    top: 9px;
   }
 
   .nav-menu-btn span:nth-child(2) {
-    top: 25px;
+    top: 15px;
   }
 
   .nav-menu-btn span:nth-child(3) {
-    top: 32px;
+    top: 21px;
   }
 
   .nav-menu-btn.open span:nth-child(1) {
@@ -471,7 +477,7 @@ nav .nav-btn {
   }
 
   nav .right-panel {
-    gap: 5px;
+    gap: 3px;
   }
 
   nav .right-panel.open {
