--- a/src/components/CardBox.css
+++ b/src/components/CardBox.css
@@ -109,10 +109,13 @@
   z-index: 3;
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
-  gap: 10px;
+  gap: 7px;
   transition: transform 0.18s, background 0.18s;
-  min-height: 32px;
+  min-height: 34px;
+  font-size: 0.9rem;
+
 }
 
 .box-card .btn.video_btn {
