--- a/src/pages/QIILandingPage.css
+++ b/src/pages/QIILandingPage.css
@@ -116,6 +116,12 @@
   margin: 0.8rem auto;
 }
 
+.subpage-cnt:hover .arrow-btn {
+  background-color: #fff;
+  color: var(--color-primary);
+}
+
+
 .subpage-cnt {
   text-align: center;
   margin: 2rem auto;
