--- a/src/index.css
+++ b/src/index.css
@@ -206,8 +206,13 @@ ul {
 }
 
 /*page-resources*/
-.title-big {
+.title-big strong {
   /* display: none; */
+
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
 
 .title-small {
@@ -218,7 +223,10 @@ ul {
   font-size: 1rem;
   z-index: 8;
   color: #fff;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
+  cursor: pointer;
+  text-decoration: underline;
+  display: inline-block;
 }
 
 .page-resource-grid {
@@ -233,6 +241,7 @@ ul {
   transition:
     transform 0.28s ease,
     box-shadow 0.28s ease;
+  min-height: 250px;
   /* margin-bottom: 2rem; */
 }
 
@@ -642,7 +651,7 @@ ul {
     font-size: 1.2rem;
     z-index: 8;
     color: #fff;
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
   }
 
   .page-resource-body {
@@ -747,4 +756,9 @@ ul {
   .sub-section-title {
     padding: 1rem 1rem;
   }
+}
+
+.ant-popover-title,
+.ant-popover-content {
+  font-size: 1rem;
 }
