--- a/src/components/CardBox.css
+++ b/src/components/CardBox.css
@@ -12,7 +12,7 @@
 }
 
 .resource_page .box-card {
-  height: 350px;
+  height: 300px;
 }
 
 .highlighted {
@@ -82,6 +82,8 @@
   -webkit-line-clamp: 3; /* number of lines */
   overflow: hidden;
   font-size: 1rem;
+  cursor: pointer;
+  display: inline-block;
 }
 
 .box-card .card-overlay {
