--- a/src/components/TopNavBar.css
+++ b/src/components/TopNavBar.css
@@ -121,7 +121,7 @@ nav .nav-btn {
   display: block;
   position: absolute;
   height: 2px;
-  width: 20px;
+  width: 14px;
   background: #000;
   border-radius: 9px;
   opacity: 1;
@@ -223,6 +223,15 @@ nav .nav-btn {
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(12px);
     box-shadow: 1px 4px 7px -3px rgb(0, 0, 0, 0.23);
+  }
+  .nav-menu-btn span {
+    width: 14px;
+  }
+  .nav-menu-btn.open span:nth-child(1) {
+    top: 15px;
+  }
+  .nav-menu-btn.open span:nth-child(3) {
+    top: 15px;
   }
 }
 
