--- a/src/pages/Procurement.css
+++ b/src/pages/Procurement.css
@@ -146,10 +146,11 @@
 
 @media (max-width: 750px) {
   .procurement .link-text p {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    font-weight: 100;
   }
 
   .procurement .link-text strong {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 }
