--- a/src/components/CardBox.css
+++ b/src/components/CardBox.css
@@ -161,7 +161,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   font-size: 10px;
+  padding: 0.7rem;
 }
 
 .video_btn:hover .icon-video {
