--- a/src/pages/CostRecovery.css
+++ b/src/pages/CostRecovery.css
@@ -2,6 +2,10 @@
   padding: 2rem 0;
 }
 
+.costRecovery .link-text strong{
+  font-size: 1.5rem;
+}
+
 .costRecovery .subpagehero {
   display: flex;
   flex-direction: column;
