--- a/src/index.css
+++ b/src/index.css
@@ -220,7 +220,8 @@ ul {
 }
 
 .country-title{
-  font-size: 0.1rem;
+  font-size: 0.8rem;
+  padding: 1rem 0 0 1rem;
   /* margin-bottom: 1rem; */
 }
 
@@ -685,7 +686,7 @@ ul {
   }
 
   .country-title{
-    font-size: 0.4rem;
+    font-size: 0.9rem;
     /* margin-bottom: 1rem; */
   }
 
