--- a/src/components/NavDropDownMenu.css
+++ b/src/components/NavDropDownMenu.css
@@ -57,7 +57,7 @@
 		position     : absolute;
 		left         : 0;
 		top          : 35px;
-		border-radius: 0 0 8px 8px;
+		border-radius: 0 8px 8px 8px;
 	}
 }
 
