--- a/src/components/VCard.css
+++ b/src/components/VCard.css
@@ -72,6 +72,7 @@
   /* max-width: 140px; */
   text-align: right;
   width: 50%;
+  font-weight: 800;
 }
 
 @media (min-width: 600px) {
@@ -89,6 +90,9 @@
   .VCard-footer {
     padding: 0 10px 1.2rem 1rem;
   }
+  .VCard-cnt {
+    margin: 1.5rem auto 1.25rem auto;
+  }
 }
 
 @media (min-width: 768px) {
@@ -98,7 +102,7 @@
     gap: 1.25rem;
     justify-content: start;
     max-width: 1270px;
-    margin: 1.25rem auto;
+    margin: 3rem auto 1.25rem auto;
   }
 
   .col-2 .VCard {
@@ -115,8 +119,8 @@
 
   .VCard {
     max-width: 450px;
-    margin: 0 auto 0.5rem;
-    padding-bottom: 80px;
+    margin: 0 auto 0;
+    padding-bottom: 50px;
     position: relative;
   }
 
@@ -143,23 +147,24 @@
   }
 
   .col-2 .VCard {
-    max-width: 68%;
+    max-width: 85%;
   }
 
   .col-2 .VCard:nth-child(odd) {
-    margin-left: 32%;
+    margin-left: 15%;
   }
 
   .col-2 .VCard:nth-child(even) {
-    margin-right: 32%;
+    margin-right: 15%;
   }
 
   .vCardBody {
     padding: 1.8rem;
   }
 
-  .VCard-footer strong {
+  .VCard-footer {
     font-size: 1.2rem;
+    padding: 0 1rem 1rem 2rem;
   }
 
   .VCard-btn {
@@ -169,7 +174,7 @@
 
   .VCard-cnt.col3 {
     grid-template-columns: repeat(3, 1fr);
-    max-width: 90%;
+    max-width: 100%;
   }
 }
 
