--- a/src/index.css
+++ b/src/index.css
@@ -219,7 +219,7 @@ ul {
   display: none;
 }
 
-.country-title{
+.country-title {
   font-size: 0.8rem;
   padding: 1rem 0 0 1rem;
   /* margin-bottom: 1rem; */
@@ -230,7 +230,7 @@ ul {
   z-index: 8;
   color: #fff;
   padding: 0 1rem 1rem 1rem;
-  cursor: pointer;
+  /* cursor: pointer; */
   display: inline-block;
 }
 
@@ -255,7 +255,7 @@ ul {
   margin-bottom: 0.8rem;
 }
 
-.page-resource-country{
+.page-resource-country {
   /* position: absolute; */
   margin: 0;
   color: #fff;
@@ -264,7 +264,6 @@ ul {
   top: 0;
   font-size: 0.8rem;
 }
-
 
 .page-resource-title {
   /* position: absolute; */
@@ -328,6 +327,7 @@ ul {
   z-index: 2;
   height: 100%;
   padding-bottom: 3rem;
+  box-shadow: 0px 15px 40px rgba(0, 0, 0, 0.3);
 }
 
 .page-resource-arrow {
@@ -375,7 +375,7 @@ ul {
   align-items: center;
   font-size: 1.4rem;
   flex-shrink: 0;
-  margin: 1rem auto;
+  margin: 0 auto;
 }
 
 .border-dash {
@@ -421,7 +421,8 @@ ul {
 }
 
 .sub-section-title {
-  padding: 0 7rem;
+  padding: 2rem 2rem 0 2rem;
+  text-align: center;
 }
 
 .resource-pagination {
@@ -447,6 +448,13 @@ ul {
   display: none;
 }
 
+.statement-text {
+  font-size: 1.5rem;
+  font-weight: 400;
+  text-align: center;
+  padding: 0 20%;
+}
+
 @media (max-width: 1009px) {
   .overlay {
     position: fixed;
@@ -461,6 +469,11 @@ ul {
 
   .no-scroll {
     overflow: hidden !important;
+  }
+
+  .statement-text {
+    font-size: 1.2rem;
+    padding: 0 2rem;
   }
 }
 
@@ -484,6 +497,11 @@ ul {
   h2 {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .statement-text {
+    font-size: 1.2rem;
+    padding: 0 0rem;
   }
 }
 
@@ -521,7 +539,7 @@ ul {
   .page-resource-link {
     height: 100%;
   }
-  .page-resource-country{
+  .page-resource-country {
     /* position: absolute; */
     font-weight: 50;
     margin: 0;
@@ -532,7 +550,7 @@ ul {
     top: 0;
     font-size: 0.8rem;
   }
-  
+
   .page-resource-title {
     /* position: absolute; */
     margin: 0;
@@ -542,6 +560,10 @@ ul {
     left: 0;
     top: 0;
     font-size: 1.1rem;
+  }
+
+  .page-resource-title span {
+    font-size: 0.8rem;
   }
 
   .page-resource-body,
@@ -611,7 +633,7 @@ ul {
   }
 
   .num-step {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     gap: 1.8rem;
   }
 
@@ -651,7 +673,7 @@ ul {
     padding: 2rem;
   }
 
-  .page-resource-country{
+  .page-resource-country {
     font-size: 0.8rem;
   }
 
@@ -659,12 +681,16 @@ ul {
     font-size: 1.2rem;
   }
 
+  .page-resource-title span {
+    font-size: 1rem;
+  }
+
   /* .page-resource-link {
     height: 120%;
   } */
 
   .num-step {
-    margin: 0 2rem 2rem 4rem;
+    margin: 0;
     gap: 2rem;
   }
 
@@ -685,7 +711,7 @@ ul {
     display: none;
   }
 
-  .country-title{
+  .country-title {
     font-size: 0.9rem;
     /* margin-bottom: 1rem; */
   }
@@ -740,7 +766,7 @@ ul {
   }
 
   .num-step {
-    margin-bottom: 2rem;
+    margin-bottom: 0;
   }
 
   .page-resource-arrow {
@@ -752,7 +778,15 @@ ul {
 
 @media (min-width: 1600px) {
   .section-title {
-    margin: 1.85rem 0 3.85rem 0;
+    margin: 0rem 0 3rem 0;
+  }
+
+  .resource_page .section-title {
+    margin: 1.85rem 0 1.85rem 0;
+  }
+
+  .resource_page .brk-line {
+    margin: 1.5rem auto 2.5rem auto;
   }
 
   /* .section-title {
@@ -814,11 +848,15 @@ ul {
 
 @media (max-width: 1400px) {
   .sub-section-title {
-    padding: 1rem 1rem;
+    padding: 1rem 1rem 0rem 1rem;
   }
 }
 
 .ant-popover-title,
 .ant-popover-content {
   font-size: 1rem;
+}
+
+.ant-popover {
+  margin: 0 2rem !important;
 }
