--- a/src/pages/FinancingResilience.css
+++ b/src/pages/FinancingResilience.css
@@ -14,7 +14,6 @@
   .FinancingResilience .hero {
     height: 360px;
   }
-
 }
 
 @media (min-width: 768px) {
@@ -22,25 +21,13 @@
     font-size: 1.2rem;
     margin-bottom: 1.5rem;
   }
-  .FinancingResilience .num-step {
-		display        : flex;
-		justify-content: center;
-		align-items    : center;
-		gap            : 1rem;
-		margin-bottom  : 1.875rem;
-	}
 }
 
 @media (min-width: 992px) {
   .FinancingResilience .list-title {
-    text-align: center;
+    text-align: left;
   }
 }
-
-.link-text {
-  margin-bottom: 2rem;
-}
-
 .FinancingResilience .border {
   border: 1px dashed rgba(134, 134, 134, 0.5);
   margin: 2rem 1rem;
@@ -57,12 +44,6 @@
 }
 
 @media (min-width: 1024px) {
-  .link-text {
-    text-align: center;
-    max-width: 100%;
-    margin: 1rem auto;
-  }
-
   .FinancingResilience .mTop2 {
     margin: 3rem 0;
   }
@@ -71,21 +52,11 @@
 @media (min-width: 1200px) {
   .FinancingResilience .list-title {
     font-size: 1.3rem;
-    margin: 1rem 0 2rem 0;
+    margin: 0rem 0 2rem 0;
   }
-  .FinancingResilience .num-step {
-		margin-bottom: 1rem;
-		gap          : 1.8rem;
-	}
 }
 
 @media (min-width: 1400px) {
-  .link-text {
-    max-width: 100%;
-    margin: 1rem auto;
-    font-size: 1.875rem;
-  }
-
   .FinancingResilience .mTop2 {
     margin: 3rem 0;
   }
@@ -94,18 +65,7 @@
   }
   .FinancingResilience .list-title {
     font-size: 1.3rem;
-    margin: 1rem 0 2rem 0;
-  }
-  .FinancingResilience .num-step {
-		margin: 0 1rem 1rem 1rem;
-		gap   : 2rem;
-	}
-}
-
-@media (min-width: 1600px) {
-  .link-text {
-    max-width: 1580px;
-    margin: 1rem auto;
+    margin: 0rem 0 2rem 0;
   }
 }
 
@@ -131,12 +91,8 @@
   z-index: 1;
 }
 
-.FinancingResilience .num-step {
-	margin-bottom: 1rem;
-}
-
-.FinancingResilience .num1-para{
-	font-style: italic;
+.FinancingResilience .num1-para {
+  font-style: italic;
 }
 
 /* .FinancingResilience .list-title {
@@ -144,91 +100,58 @@
   margin-bottom: 1.25rem;
 } */
 
-.FinancingResilience .num-step {
-	margin-bottom: 1rem;
+.FinancingResilience .num1-para {
+  font-style: italic;
 }
-
-.FinancingResilience .num1-para{
-	font-style: italic;
-} 
 
 @media (max-width: 649px) {
-	.FinancingResilience .Header3 .container {
-		padding-bottom: 0;
-	}
+  .FinancingResilience .Header3 .container {
+    padding-bottom: 0;
+  }
 
-	.container.noPTop {
-		padding-top: 1rem;
-	}
-}
-
-.link-text {
-	margin-bottom: 2rem;
+  .container.noPTop {
+    padding-top: 1rem;
+  }
 }
 
 .FinancingResilience .border {
-	border: 1px dashed rgba(134, 134, 134, 0.5);
-	margin: 2rem 1rem;
+  border: 1px dashed rgba(134, 134, 134, 0.5);
+  margin: 2rem 1rem;
 }
 
 .VCard-cnt {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .v-small-text {
-	text-align: center;
-	margin    : 1rem 0 0 0;
-	font-size : 0.9375rem;
+  text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.9375rem;
 }
 
 @media (min-width: 1024px) {
-	.link-text {
-		text-align: center;
-		max-width : 90%;
-		margin    : 1rem auto;
-	}
-
-	.FinancingResilience .mTop2 {
-		margin: 3rem 0;
-	}
+  .FinancingResilience .mTop2 {
+    margin: 3rem 0;
+  }
 }
 
 @media (min-width: 1200px) {
   .FinancingResilience .list-title {
     font-size: 1.3rem;
-    margin: 1rem 0 2rem 0;
+    margin: 0rem 0 2rem 0;
   }
-  .FinancingResilience .num-step {
-		margin-bottom: 1rem;
-		gap          : 1.8rem;
-	}
 }
 
 @media (min-width: 1400px) {
-	.link-text {
-		max-width: 90%;
-		margin   : 1rem auto;
-		font-size: 1.875rem;
-	}
 
-	.FinancingResilience .mTop2 {
-		margin: 3rem 0;
-	}
-	.FinancingResilience .list-title {
-    font-size: 1.3rem;
-    margin: 1rem 0 2rem 0;
+  .FinancingResilience .mTop2 {
+    margin: 3rem 0;
   }
-  .FinancingResilience .num-step {
-		margin: 0 1rem 1rem 1rem;
-		gap   : 2rem;
-	}
+  .FinancingResilience .list-title {
+    font-size: 1.3rem;
+    margin: 0rem 0 2rem 0;
+  }
 }
 
 @media (min-width: 1600px) {
-	.link-text {
-		max-width: 1480px;
-		margin   : 1rem auto;
-	}
-
-
 }
