--- a/src/pages/QIILandingPage.css
+++ b/src/pages/QIILandingPage.css
@@ -33,15 +33,15 @@
 }
 
 .qii_video_landing_page .qii-video-text-cnt .video-title {
-  font-size: 1.3rem;
-  /* font-weight: 400; */
+  font-size: 1.85rem;
+  font-weight: 500;
   color: #ffffff;
 }
 
 .qii_video_landing_page .qii-video-text-cnt .video-desc {
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: #ffffff;
-  width: 500px;
+  width: 600px;
   margin-top: 1rem;
 }
 
@@ -118,12 +118,13 @@
   padding: 1.4rem 0;
 }
 
-.qii2 .mBottom {
-  margin-bottom: 0.85rem;
-}
-
 .sub-pages {
   display: grid;
+}
+
+.qii2-video-cta:disabled {
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .qii2 .qii2-video-cta {
@@ -161,10 +162,23 @@
   font-size: 90px;
   margin: 0 auto;
   cursor: pointer;
+  /* transition: 0.4s; */
+}
+
+.subpage-cnt:hover .icon-subpage {
+  color: #00a996;
+}
+
+.subpage-cnt .icon-subpage svg {
+  /* transition: 0.4s; */
+}
+
+.subpage-cnt:hover .icon-subpage svg {
+  fill: #00a996;
 }
 
 .subpage-cnt .arrow-btn {
-  margin: 0.8rem auto;
+  margin: 0 auto 0rem auto;
 }
 
 .subpage-cnt:hover .arrow-btn {
@@ -174,7 +188,7 @@
 
 .subpage-cnt {
   text-align: center;
-  margin: 2rem auto;
+  margin: 0 auto 0 auto;
   max-width: 230px;
   position: relative;
   padding-bottom: 4rem;
@@ -210,7 +224,6 @@
   scroll-margin-top: 100px;
 }
 
-
 @media (min-width: 600px) {
   .sub-pages {
     grid-template-columns: repeat(2, 1fr);
@@ -223,15 +236,15 @@
 
   .center-header {
     text-align: center;
-    padding: 2rem 0;
+    padding: 0rem 0 2rem 0;
   }
 
   .header-text {
     padding: 1rem 0;
   }
- .qii_video_landing_page .qii-video-text-cnt .video-desc {
+  .qii_video_landing_page .qii-video-text-cnt .video-desc {
     width: 100%;
-  } 
+  }
 }
 
 @media (max-width: 768px) {
@@ -264,11 +277,13 @@
 
   .qii_video_landing_page .qii-video-text-cnt .video-title {
     color: #000;
+    font-size: 1.2rem;
   }
 
   .qii_video_landing_page .qii-video-text-cnt .video-desc {
     color: #000;
     width: 100%;
+    font-size: 1rem;
   }
 }
 
@@ -343,7 +358,7 @@
 @media (min-width: 1024px) {
   .center-header {
     text-align: center;
-    padding: 2rem 0;
+    padding: 0rem 0 2rem 0;
   }
   .qii_video_landing_page .qii-video-text-cnt {
     position: absolute;
@@ -361,13 +376,13 @@
   }
 
   .center-header {
-    padding: 2.5rem 0;
+    padding: 0 0 2.5rem 0;
   }
 }
 
 @media (min-width: 1200px) {
   .center-header {
-    padding: 1rem 0;
+    padding: 0 0 1rem 0;
   }
 }
 
@@ -376,16 +391,20 @@
     margin: 0.4rem 0;
   }
 
-   .qii_video_landing_page .qii-video-text-cnt .video-desc {
+  .qii_video_landing_page .qii-video-text-cnt .video-desc {
     width: 600px;
   }
 }
 
 @media (min-width: 1400px) {
   .center-header {
-    padding: 4rem 0;
+    padding: 0 0 3rem 0;
     max-width: 1450px;
     margin: 0 auto;
+  }
+
+  .internal-pages-cards {
+    padding: 5rem 2rem;
   }
 }
 
@@ -396,9 +415,7 @@
   }
 }
 
-
 /* added  */
-
 
 .landingpage-banner .Header3 .footer {
   max-width: 95%;
@@ -410,9 +427,7 @@
   align-items: center;
   gap: 2.5rem;
   margin-bottom: 3rem;
-
 }
-
 
 .landingpage-description .light-font {
   text-align: left;
@@ -440,7 +455,7 @@
   position: relative;
   max-width: 100%;
   margin: 0 auto;
- 
+
   overflow: hidden;
   box-shadow: 0 16px 40px rgba(14, 13, 13, 0.25);
 }
