--- a/src/pages/ResilientDesignAndOperation.css
+++ b/src/pages/ResilientDesignAndOperation.css
@@ -34,24 +34,14 @@
     font-size: 1.2rem;
     margin-bottom: 1.5rem;
   }
-  .ResilientDesignAndOperation .num-step {
-		display        : flex;
-		justify-content: center;
-		align-items    : center;
-		gap            : 1rem;
-		margin-bottom  : 1rem;
-	}
 }
 
 @media (min-width: 992px) {
   .ResilientDesignAndOperation .list-title {
-    text-align: center;
+    text-align: left;
   }
 }
 
-.link-text {
-  margin-bottom: 2rem;
-}
 
 .ResilientDesignAndOperation .border {
   border: 1px dashed rgba(134, 134, 134, 0.5);
@@ -69,11 +59,6 @@
 }
 
 @media (min-width: 1024px) {
-  .link-text {
-    text-align: center;
-    max-width: 100%;
-    margin: 1rem auto;
-  }
 
   .ResilientDesignAndOperation .mTop2 {
     margin: 3rem 0;
@@ -85,19 +70,10 @@
     font-size: 1.3rem;
     margin: 1rem 0 2rem 0;
   }
-  .ResilientDesignAndOperation .num-step {
-		margin-bottom: 1rem;
-		gap          : 1.8rem;
-	}
 }
 
 @media (min-width: 1400px) {
-  .link-text {
-    max-width: 100%;
-    margin: 1rem auto;
-    font-size: 1.875rem;
-  }
-
+ 
   .ResilientDesignAndOperation .mTop2 {
     margin: 3rem 0;
   }
@@ -115,21 +91,11 @@
     font-size: 1.3rem;
     margin: 1rem 0 2rem 0;
   }
-  .ResilientDesignAndOperation .num-step {
-		margin: 0 1rem 1rem 1rem;
-		gap   : 2rem;
-	}
-}
-
-@media (min-width: 1600px) {
-  .link-text {
-    max-width: 1580px;
-    margin: 1rem auto;
-  }
 }
 
 .qii4-note {
   padding: 0 7rem;
+  text-align: center;
 }
 
 @media (max-width: 600px) {
